--- a/src/components/CardNota/CardNota.css
+++ b/src/components/CardNota/CardNota.css
@@ -1,3 +1,14 @@
 .card-nota {
-  color: red;
+  color: #474747;
+  font-family: Arial, Helvetica, sans-serif;
+  border: 0.5px solid #636363;
+  border-radius: 10px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+  height: fit-content;
+  width: 200px;
+  padding: 10px 20px;
+}
+.card-header {
+  font-size: 18px;
+  line-height: 20px;
 }
